[gd_scene load_steps=9 format=2]

[ext_resource path="res://Art Assets/Props/Door (32x32).png" type="Texture" id=1]
[ext_resource path="res://Scripts/Level items/Door_Key.gd" type="Script" id=2]
[ext_resource path="res://Art Assets/Input Art/tile_0168.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Door_Closed",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Door_Open",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12.5, 13 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12.5, 13 )

[node name="Door_Key" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 18
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "Door_Closed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 3 )
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.5, 3 )
shape = SubResource( 5 )

[node name="Down_Arrow" type="Sprite" parent="."]
visible = false
position = Vector2( 0.5, -17 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
